--- a/resources/assets/sass/components/tile.scss
+++ b/resources/assets/sass/components/tile.scss
@@ -7,6 +7,7 @@
 // Style guide: Components.Tile
 .Tile {
     overflow: hidden;
+    position: relative;
 
     margin-bottom: 20px;
     border-radius: $borderRadius + px;
@@ -15,6 +16,29 @@
     box-shadow: 0 1px 2px 0 rgba(45, 49, 66, 0.25);
 
     text-align: justify;
+
+    @media (max-width: $screen-sm-max) {
+        &--withToggle {
+            .Tile__body {
+                display: none;
+            }
+        }
+    }
+
+    &__toggle {
+        position: absolute;
+        right: 13px;
+        top: 16px;
+        color: #2b2b2a;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        @media (min-width: $screen-md-min) {
+            display: none;
+        }
+    }
 
     &__heading {
         display: flex;
@@ -27,7 +51,7 @@
         text-align: map_get($tileHeading, textAlign);
         white-space: nowrap;
 
-        .material-icons {
+        > .material-icons {
             margin-right: 5px;
         }
     }
