--- a/resources/assets/sass/scaffolding.scss
+++ b/resources/assets/sass/scaffolding.scss
@@ -17,6 +17,12 @@ body {
     }
 }
 
+@media (min-width: $screen-md-min) {
+    .removePadding {
+        padding: 0;
+    }
+}
+
 img {
     vertical-align: initial;
 }
