--- a/resources/assets/sass/admin/custom.scss
+++ b/resources/assets/sass/admin/custom.scss
@@ -1,1 +1,4 @@
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css";
+
+@import "../variables";
+@import "../components/public-chat";
