--- a/resources/assets/sass/admin/custom.scss
+++ b/resources/assets/sass/admin/custom.scss
@@ -1,4 +1,6 @@
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css";
 
+@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
 @import "../variables";
 @import "../components/public-chat";
