Notifications icon initial design

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,6 +42,7 @@
 @import "components/scroll-top-button";
 @import "components/low-profile-completion";
 @import "components/public-chat";
+@import "components/notifications-manager";
 
 // Modules
 @import "modules/online-users";
