--- a/resources/assets/sass/components/notifications-manager.scss
+++ b/resources/assets/sass/components/notifications-manager.scss
@@ -3,34 +3,33 @@
     z-index: 9;
     bottom: 0;
     right: 25px;
-
-    width: 55px;
-
+    width: auto;
     box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
 
     &__head {
         position: relative;
         cursor: pointer;
         border-radius: 2px 2px 0 0;
         text-align: center;
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: row;
         flex-direction: row;
-        height: 50px;
-        color: #fff;
-        background: #3e3838;
+        height: map_get($privateChatManager, 'headHeight') + px;
+        background-color: map_get($privateChatManager, 'headBackGroundColor');
+        color: map_get($privateChatManager, 'headColor');
+        background: lighten(#312c2c, 5%);
     }
 
     &__toggle {
-        top: 0;
-        left: 0;
         padding: 15px;
         cursor: pointer;
-        text-align: center;
+        text-align: left;
+        width: 100%;
+
+        &__minimize {
+            float: right;
+            padding-top: 3px;
+        }
     }
 
     &__newNotifications {
@@ -45,5 +44,59 @@
         background-color: #2c2c2c;
         padding: 5px 8px;
         border-radius: 50%;
+    }
+
+    &.maximized {
+        z-index: 11;
+
+        .NotificationsManager__body {
+            display: block;
+        }
+
+        .NotificationsManager {
+            &__head {
+                height: map_get($privateChatManager, 'headHeightMobileMaximized') + px;
+            }
+        }
+    }
+
+    &__body {
+        display: none;
+        max-height: 600px;
+        overflow-y: scroll;
+        width: 370px;
+
+        &__item {
+            padding: 15px 10px;
+        }
+    }
+}
+
+@media (max-width: $screen-sm-max) {
+
+    .NotificationsManager {
+
+        &.maximized {
+            top: 40%;
+            left: 0;
+            right: 0;
+            z-index: 11;
+
+            .NotificationsManager {
+                &__head {
+                    height: map_get($privateChatManager, 'headHeightMobileMaximized') + px;
+                }
+
+                &__body {
+                    width: auto;
+                    max-height: initial;
+                    background-color: #fff;
+                    height: -webkit-calc(100% - #{map_get($privateChatManager, 'headHeightMobileMaximized') + px});
+                    height: -moz-calc(100% - #{map_get($privateChatManager, 'headHeightMobileMaximized') + px});
+                    height: calc(100% - #{map_get($privateChatManager, 'headHeightMobileMaximized') + px});
+                }
+            }
+        }
+
     }
 }
