--- a/resources/assets/sass/components/tile.scss
+++ b/resources/assets/sass/components/tile.scss
@@ -77,6 +77,10 @@
             padding: 30px;
             text-align: justify;
         }
+
+        .Tile__heading {
+            white-space: initial;
+        }
     }
 
     &__footer {
