start of rework to create whitelabels

--- a/resources/assets/sass/whitelabel-nl-variables.scss
+++ b/resources/assets/sass/whitelabel-nl-variables.scss
@@ -1,15 +1,7 @@
-// Brand Variables
-//
-// Markup: brand.hbs
-//
-// Brand Variables
-//
-// Style guide: Brand Variables
-
 // colors
 $slate: #4f5d75;
 $slateLight: #617493;
-$dark: #312c2c;
+$dark: #114d4e;
 $tomato: #ef4f2b;
 $tomatoLight: #ee796d;
 $salmon: #f3a69e;
