--- a/resources/assets/sass/altijdsex-nl.scss
+++ b/resources/assets/sass/altijdsex-nl.scss
@@ -3,7 +3,7 @@
 
 @import "mixins";
 
-@import "brand";
+@import "altijdsex-nl-variables";
 
 // BootstrapPrev
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
