--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -84,6 +84,12 @@
         padding: 10px 0;
         margin-bottom: 5px;
         text-align: center;
+
+        &.lower {
+            top: 80px;
+            color: #666;
+            font-size: 15px;
+        }
     }
 
     .fetchMoreButton {
