--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -8,6 +8,39 @@
 
 @include private-chat-list;
 
+.EmoticonPicker {
+    position: absolute;
+    top: -433px;
+    right: 0;
+    background-color: #fff;
+
+    .emoticon {
+        display: flex;
+        flex-grow: 1;
+        width: 20%;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+    }
+}
+
+
+.emoji-picker .emoji-dropdown .emojis .emoji {
+    font-size: 1.2em !important;
+}
+
+.emoji-picker .emoji-dropdown .emojis .category {
+    font-size: 1.5rem !important;
+}
+
+.emoji-picker .footer .title {
+    display: none;
+}
+
+.emoji-picker .active:before {
+    top: 16px !important;
+}
+
 .PrivateChatItem {
     position: fixed;
     z-index: 10;
@@ -101,6 +134,16 @@
             position: relative;
             top: 2px;
         }
+    }
+
+    &__emoticonsIcon {
+        position: absolute;
+        right: 81px;
+        bottom: 15px;
+        margin: 0;
+        height: 29px;
+        font-size: 22px;
+        cursor: pointer;
     }
 
     &__attachmentIcon {
@@ -388,11 +431,16 @@
         padding: 8px 14px 7px 5px;
         box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
 
+        @media (min-width: $screen-md-min) {
+            max-width: 213px;
+        }
+
         &:focus {
             outline: 0;
         }
 
         &__wrapper {
+            position: relative;
             background-color: $white;
         }
 
