--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -425,7 +425,7 @@
         height: 72px;
         display: block;
         border: medium none;
-        width: 74%;
+        width: 85%;
         overflow: scroll;
         resize: none;
         font-size: 1.7rem;
@@ -435,8 +435,20 @@
         padding: 8px 14px 7px 5px;
         box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
 
-        @media (min-width: $screen-md-min) {
+        @media (min-width: $screen-lg-min) {
             max-width: 275px;
+        }
+
+        @media (max-width: 650px) {
+            max-width: 400px;
+        }
+
+        @media (max-width: 500px) {
+            max-width: 320px;
+        }
+
+        @media (max-width: 380px) {
+            max-width: 220px;
         }
 
         &:focus {
@@ -481,7 +493,7 @@
     }
 }
 
-@media (max-width: $screen-sm-max) {
+@media (max-width: $screen-md-max) {
     .PrivateChatItem {
         z-index: 500;
         top: 0;
@@ -639,7 +651,7 @@
     .PrivateChatItem__textarea {
         height: 100%;
 
-        @media (min-width: $screen-md-min) {
+        @media (min-width: $screen-lg-min) {
             max-width: 100%;
         }
 
