--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -58,7 +58,7 @@
 .navbar-default {
     border: $navbarBorderWidth + px solid $navbarBgColor;
     border-radius: 0;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.25);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
     background: $navbarBgColor;
 
     position: fixed;
@@ -132,6 +132,12 @@
                 width: 123px;
                 height: $navbarHeight + px;
                 font-size: 20px;
+
+                @media (max-width: $screen-sm-max) {
+                    position: absolute;
+                    right: 20px;
+                    top: 59px;
+                }
 
                 a {
                     color: $navbarLinkColor;
@@ -341,6 +347,14 @@
 
 // change navbar collapse breakpoint
 @media (max-width: $screen-sm-max) {
+    .showMobile {
+        display: block !important;
+    }
+
+    .showDesktop {
+        display: none !important;
+    }
+
     .navbar-header {
         float: none;
         position: relative;
@@ -386,6 +400,36 @@
         border: 0;
         -webkit-box-shadow: none;
         box-shadow: none;
+    }
+
+    .userDropdown .dropdown-menu {
+        display: block;
+        position: static;
+        background-color: transparent;
+        border: 0 none;
+        box-shadow: none;
+        margin-top: 0;
+        width: 100%;
+    }
+    .navbar-nav .dropdown-menu > li > a,
+    .navbar-nav .dropdown-menu .dropdown-header {
+        padding: 5px 15px 5px 25px;
+    }
+    .navbar-nav .dropdown-menu > li > a {
+        line-height: 20px;
+    }
+    .navbar-default .navbar-nav .dropdown-menu > li > a {
+        color: #777;
+    }
+}
+
+@media (min-width: $screen-md-min) {
+    .showMobile {
+        display: none !important;
+    }
+
+    .showDesktop {
+        display: block !important;
     }
 }
 
