--- a/resources/assets/sass/altijdsex-nl.scss
+++ b/resources/assets/sass/altijdsex-nl.scss
@@ -55,6 +55,7 @@
 @import "views/edit-profile";
 @import "views/credits";
 @import "views/contact";
+@import "views/welcome-modal";
 
 @import "vue-apps/private-chat/main";
 
