--- a/resources/assets/sass/altijdsex-nl.scss
+++ b/resources/assets/sass/altijdsex-nl.scss
@@ -42,6 +42,7 @@
 @import "components/scroll-top-button";
 @import "components/low-profile-completion";
 @import "components/public-chat";
+@import "components/discount-header";
 
 // Modules
 @import "modules/online-users";
