--- a/resources/assets/sass/views/credits.scss
+++ b/resources/assets/sass/views/credits.scss
@@ -225,6 +225,14 @@ Table of Contents End
         font-size: 16px;
     }
 
+    .normalPrice {
+        text-decoration: line-through;
+    }
+
+    .discountPrice {
+        font-weight: bold;
+        color: #30d054;
+    }
 
     .block-pricing {
         .table {
