whitelabel rework + fix registration keyword logging

--- a/resources/assets/sass/admin/custom.scss
+++ b/resources/assets/sass/admin/custom.scss
@@ -2,5 +2,6 @@
 
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
+@import "../altijdsex-nl-variables";
 @import "../variables";
 @import "../components/public-chat";
