--- a/resources/assets/sass/components/public-chat.scss
+++ b/resources/assets/sass/components/public-chat.scss
@@ -1,6 +1,6 @@
 .PublicChat {
     position: relative;
-    overflow: visible;
+    //overflow: visible;
 
     .labelNew {
         position: absolute;
@@ -51,7 +51,7 @@
     }
 
     &__timeAgo {
-        color: #ce5338;
+        color: $secondaryColor;
 
         @media (max-width: $screen-xs-max) {
             font-size: 11px;
@@ -145,12 +145,12 @@
         .btn {
             color: #fff;
             border-radius: 6px;
-            background-color: #d3654c;
+            background-color: $secondaryColor;
             -webkit-box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
             box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
 
             &:hover {
-                background-color: #ce5338;
+                background-color: darken($secondaryColor, 5%);
             }
         }
 
