--- a/resources/assets/sass/search-bar.scss
+++ b/resources/assets/sass/search-bar.scss
@@ -6,7 +6,7 @@
     border-radius: 0 0 5px 5px;
     padding: 10px;
 
-    background: linear-gradient(90deg, #312c2c 13%, #312c2c 100%);
+    background: linear-gradient(90deg, $navbarBgColor 13%, $navbarBgColor 100%);
 
     width: 100%;
     left: 0;
@@ -77,7 +77,7 @@
 
                 &:hover {
                     outline: 0;
-                    background-color: #9d515e;
+                    background-color: lighten($secondaryColor, 6%);
                     border-color: #a98a90;
                     color: #fff;
                 }
@@ -85,7 +85,7 @@
                 &.active {
                     color: #fff;
                     outline: 0;
-                    background-color: #c77c8a;
+                    background-color: lighten($secondaryColor, 4%);
                     border-color: #a98a90;
                 }
             }
