--- a/resources/assets/sass/sites/liefdesdate-nl/search-bar.scss
+++ b/resources/assets/sass/sites/liefdesdate-nl/search-bar.scss
@@ -16,6 +16,11 @@
     left: 15px;
     right: 15px;
 
+    @media (max-width: $screen-xs-max) {
+        left: 0;
+        right: 0;
+    }
+
     top: $navbarHeight + px;
 
     .credits {
