--- a/resources/assets/sass/liefdesdate-nl-variables.scss
+++ b/resources/assets/sass/liefdesdate-nl-variables.scss
@@ -28,7 +28,7 @@ $solvingTheMoneyProblem: #ce5a5a;
 // brand colors
 $mainColor: #393939;
 $secondaryColor: $solvingTheMoneyProblem;
-$tertiaryColor: #FFBEFF;
+$tertiaryColor: #81dada;
 $fourthColor: #e27e67;
 $textColor: $black;
 
