--- a/resources/assets/sass/sites/altijdsex-nl/navbar.scss
+++ b/resources/assets/sass/sites/altijdsex-nl/navbar.scss
@@ -24,7 +24,7 @@
         position: absolute;
         top: 0;
         left: -101% !important;
-        margin-top: -1px;
+        margin-top: -1px !important;
         width: 100%;
     }
 
