--- a/resources/assets/sass/sites/liefdesdate-nl/navbar.scss
+++ b/resources/assets/sass/sites/liefdesdate-nl/navbar.scss
@@ -23,8 +23,8 @@
     .dropdown-menu {
         position: absolute;
         top: 0;
-        left: -101%;
-        margin-top: -1px;
+        left: -101% !important;
+        margin-top: -1px !important;
         width: 100%;
     }
 
@@ -55,7 +55,7 @@
     top: 0;
 }
 
-.navbar {
+.navbar-default.navbar {
     @media (max-width: $screen-sm-max) {
         min-height: $navbarHeightSmallScreens + px;
     }
@@ -71,7 +71,7 @@
     }
 }
 
-.navbar-default {
+.navbar-default.navbar {
     border: $navbarBorderWidth + px solid $navbarBgColor;
     border-radius: 0;
     // box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
@@ -137,15 +137,18 @@
 
                 a {
                     color: $navbarLinkColor;
+                    outline: none;
 
                     &:hover {
                         color: darken($navbarLinkColor, 15%);
                         cursor: pointer;
                         text-decoration: none;
+                        outline: none;
                     }
 
                     &:focus {
                         text-decoration: none;
+                        outline: none;
                     }
                 }
             }
@@ -213,14 +216,18 @@
                         padding-bottom: 5px;
                         color: $navbarLinkColor;
                         font-size: 16px;
+                        outline: none;
 
                         @media (min-width: $screen-md-min) {
                             background-color: $navbarBgColor;
                         }
 
-                        &:hover {
+                        &:hover,
+                        &:focus
+                        {
                             background-color: darken($navbarBgColor, 2%);
                             color: #fff;
+                            outline: none;
                         }
 
                         &.buyCreditsNavLink {
@@ -293,12 +300,6 @@
     .userDropdown {
         position: relative;
 
-        .caret {
-            top: 10px;
-            position: relative;
-            margin-left: 4px;
-        }
-
         &__image {
             @include roundedImage;
 
@@ -311,6 +312,7 @@
 
         .dropdown-toggle {
             display: flex;
+            align-items: center;
             flex-direction: row;
             padding-left: 55px;
         }
@@ -326,7 +328,7 @@
     }
 }
 
-.navbar-brand {
+.navbar .navbar-brand {
     display: inline-block;
     height: auto;
     padding-top: ($navbarHeight - $logoHeight - 2 * $navbarBorderWidth) / 2 + px;
@@ -358,83 +360,85 @@
         }
     }
 }
+.navbar-default.navbar {
 
-// change navbar collapse breakpoint
-@media (max-width: $screen-sm-max) {
-    .showMobile {
-        display: block !important;
-    }
+    // change navbar collapse breakpoint
+    @media (max-width: $screen-sm-max) {
+        .showMobile {
+            display: block !important;
+        }
 
-    .showDesktop {
-        display: none !important;
-    }
+        .showDesktop {
+            display: none !important;
+        }
 
-    .navbar-header {
-        float: none;
-        position: relative;
-    }
-    .navbar-left, .navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none !important;
-    }
-    .navbar-nav {
-        float: none !important;
-        margin-top: 7.5px;
-    }
-    .navbar-nav > li {
-        float: none;
-    }
-    .navbar-nav > li > a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in {
-        display: block !important;
-    }
+        .navbar-header {
+            float: none;
+            position: relative;
+        }
+        .navbar-left, .navbar-right {
+            float: none !important;
+        }
+        .navbar-toggle {
+            display: block;
+        }
+        .navbar-collapse {
+            border-top: 1px solid transparent;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+        }
+        .navbar-fixed-top {
+            top: 0;
+            border-width: 0 0 1px;
+        }
+        .navbar-collapse.collapse {
+            display: none !important;
+        }
+        .navbar-nav {
+            float: none !important;
+            margin-top: 7.5px;
+        }
+        .navbar-nav > li {
+            float: none;
+        }
+        .navbar-nav > li > a {
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        .collapse.in {
+            display: block !important;
+        }
 
-    .navbar-nav .dropdown-menu {
-        position: static;
-        float: none;
-        width: auto;
-        margin-top: 0;
-        background-color: transparent;
-        border: 0;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
+        .navbar-nav .dropdown-menu {
+            position: static;
+            float: none;
+            width: auto;
+            margin-top: 0;
+            background-color: transparent;
+            border: 0;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+        }
 
-    .userDropdown > .dropdown-menu.main-dropdown {
-        display: block;
-        position: static;
-        background-color: transparent;
-        border: 0 none;
-        box-shadow: none;
-        margin-top: 0;
-        width: 100%;
+        .userDropdown > .dropdown-menu.main-dropdown {
+            display: block;
+            position: static;
+            background-color: transparent;
+            border: 0 none;
+            box-shadow: none;
+            margin-top: 0;
+            width: 100%;
+        }
+        //.navbar-nav .dropdown-menu > li > a,
+        //.navbar-nav .dropdown-menu .dropdown-header {
+        //    padding: 5px 15px 5px 25px;
+        //}
+        //.navbar-nav .dropdown-menu > li > a {
+        //    line-height: 20px;
+        //}
+        //.navbar-default .navbar-nav .dropdown-menu > li > a {
+        //    color: #777;
+        //}
     }
-    //.navbar-nav .dropdown-menu > li > a,
-    //.navbar-nav .dropdown-menu .dropdown-header {
-    //    padding: 5px 15px 5px 25px;
-    //}
-    //.navbar-nav .dropdown-menu > li > a {
-    //    line-height: 20px;
-    //}
-    //.navbar-default .navbar-nav .dropdown-menu > li > a {
-    //    color: #777;
-    //}
 }
 
 @media (min-width: $screen-md-min) {
@@ -447,7 +451,7 @@
     }
 }
 
-.navbar {
+.navbar-default.navbar {
     .container {
         position: relative;
     }
