--- a/resources/assets/sass/components/sites/altijdsex-nl/private-chat-manager.scss
+++ b/resources/assets/sass/components/sites/altijdsex-nl/private-chat-manager.scss
@@ -40,6 +40,7 @@
 
             &__text {
                 position: relative;
+                font-size: 1.8rem;
             }
         }
 
@@ -221,6 +222,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            color: #333;
 
             font-weight: 500;
             font-size: 15px;
