--- a/resources/assets/sass/components/sites/altijdsex-nl/private-chat-item.scss
+++ b/resources/assets/sass/components/sites/altijdsex-nl/private-chat-item.scss
@@ -298,6 +298,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        font-size: 1.8rem;
 
         &Anchor {
             text-decoration: none;
