--- a/resources/assets/sass/components/sites/liefdesdate-nl/public-chat.scss
+++ b/resources/assets/sass/components/sites/liefdesdate-nl/public-chat.scss
@@ -145,7 +145,7 @@
     }
 
     &__panelFooter {
-        background-color: white;
+        background-color: #fff !important;
         border-top: 1px solid $input-border;
 
         .btn {
