--- a/resources/assets/sass/components/sites/altijdsex-nl/user-profile.scss
+++ b/resources/assets/sass/components/sites/altijdsex-nl/user-profile.scss
@@ -8,6 +8,7 @@
 .User-profile__info {
     &__body {
         padding: 0;
+        font-size: 1.6rem;
 
         table {
             margin-bottom: 0;
