--- a/resources/assets/sass/components/sites/altijdsex-nl/user-summary.scss
+++ b/resources/assets/sass/components/sites/altijdsex-nl/user-summary.scss
@@ -122,6 +122,8 @@
 
         width: 110px;
         height: 45px;
+        left: 50%;
+        margin-left: -55px;
         border-radius: 6px;
         background-color: lighten($secondaryColor, 5%);
         box-shadow: 1px 2px 2px rgba(0,0,0,0.3);
